# pyShape

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
primitive/: color.py  line.py  point.py
utils/: constants.py  image.py  init.py
