[tool.poetry]
name = "pyShape"
version = "0.1.0"
description = "A library for generating different shapes"
authors = ["rawdaGastan <rawda.gastan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "7.1"

[tool.poetry.dev-dependencies]
build = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
